# TrianGL

./: .clang-format  .gitignore  .gitmodules  Build.bat  Build.py  CMakeLists.txt  FEATURES.md  GenerateCoverageReport.py  LICENSE.md  README.md  RunClangFormat.py  RunFormatter.py  RunTestCoverage.py  Setup.py  TODO.md  cmake-variants.yaml  premake5.lua
Engine/: CMakeLists.txt  premake5.lua
Engine/Assets/_Engine/Shaders/: default.frag  default_particle.frag  default_particle.vert  default_sprite.frag
Engine/Source/Assets/: Animation.cpp  Animation.h  AnimationSprite.cpp  AnimationSprite.h  Audio.cpp  Audio.h  Material.cpp  Material.h  MaterialUniforms.cpp  MaterialUniforms.h  Texture.cpp  Texture.h  TextureParameters.h  TextureSlice.cpp  TextureSlice.h
Engine/Source/Assets/Internal/: Quad.cpp  Quad.h  Shader.cpp  Shader.h  ShaderInfo.cpp  ShaderInfo.h  Sprite.cpp  Sprite.h
Engine/Source/Components/: SpriteRenderer.cpp  SpriteRenderer.h  TextureRenderer.cpp  TextureRenderer.h
Engine/Source/Core/: Application.cpp  Application.h  ApplicationStatus.h  AssetManager.cpp  AssetManager.h  Clock.cpp  Clock.h  DataTypes.h  DefaultResourcesCollection.cpp  DefaultResourcesCollection.h  EntityManager.cpp  EntityManager.h  IdGenerator.cpp  IdGenerator.h  InputCodes.h  InputCodes.hpp  InputSystem.cpp  InputSystem.h  MemoryLeakDetection.h  ResourceManager.cpp  ResourceManager.h  Service.h  ServiceCollection.h  Window.cpp  Window.h
Engine/Source/Core/Internal/: AudioLayer.h  AudioLayerDefault.cpp  AudioLayerMock.cpp  InputLayer.h  InputLayerDefault.cpp  InputLayerMock.cpp  RenderLayer.cpp  RenderLayer.h  RenderLayerDefault.cpp  RenderLayerMock.cpp
Engine/Source/Core/Services/: Clock.cpp  Clock.h  InputSystem.cpp  InputSystem.h  Window.cpp  Window.h
Engine/Source/DefaultResources/: DefaultMaterial.cpp  DefaultMaterial.h
Engine/Source/Entities/: Camera.cpp  Camera.h
Engine/Source/Events/: WindowEvents.h
Engine/Source/Exceptions/Assets/: IncompatibleMaterialException.h  InvalidMaterialUniformException.h
Engine/Source/Exceptions/Common/: FileNotFoundException.cpp  FileNotFoundException.h  FileNotFoundException.hpp  FileTooBigException.cpp  FileTooBigException.h  FileTooBigException.hpp
Engine/Source/Exceptions/Core/: ApplicationNotYetInitialized.hpp  CannotRunEngine.h  FailedToInitializeEngineException.cpp  FailedToInitializeEngineException.h  FailedToInitializeEngineException.hpp  ForbiddenCallToConstructor.h  ForbiddenCallToConstructor.hpp  GameModeAlreadySetException.cpp  GameModeAlreadySetException.h  GameModeAlreadySpecifiedException.cpp  GameModeAlreadySpecifiedException.h  GameModeMissingException.cpp  GameModeMissingException.h  MissingMainCameraException.cpp  MissingMainCameraException.h  OpenGlException.cpp  OpenGlException.h  ServiceNotYetInitialized.cpp  ServiceNotYetInitialized.h  ShaderCompilationException.cpp  ShaderCompilationException.h  SingletonNotBeingUsedException.cpp  SingletonNotBeingUsedException.h
Engine/Source/Exceptions/Game/: GameModeAlreadySpecifiedException.h  GameModeAlreadySpecifiedException.hpp  MissingGameModeException.h  MissingGameModeException.hpp  MissingMainCameraException.hpp
Engine/Source/Exceptions/OpenGL/: OpenGlException.h  OpenGlException.hpp  ShaderCompilationException.h  ShaderCompilationException.hpp  ShaderLinkingException.h
Engine/Source/Game/: Component.cpp  Component.h  Entity.cpp  Entity.h  GameMode.cpp  GameMode.h  GameObject.cpp  GameObject.h  IUpdatable.cpp  IUpdatable.h  Object.cpp  Object.h  Transform.cpp  Transform.h
Engine/Source/Game/Base/: ImGuiMenuRender.cpp  ImGuiRenderer.cpp  Updatable.h  (+3 more)
Engine/Source/General/: Camera.cpp
Engine/Source/Graphics/: Texture.cpp  Texture.h  TextureParameters.hpp
Engine/Source/Memory/: LazyPtr.h  SharedPtr.h
Engine/Source/Rendering/: Animator.cpp  Animator.h  AudioPlayer.cpp  AudioPlayer.h  ParticleSystem.cpp  ParticleSystem.h  SpriteRenderer.cpp  SpriteRenderer.h
Engine/Source/Resources/: Audio.cpp  Audio.h  Material.cpp  Material.h  MaterialAttributes.cpp  MaterialAttributes.h  MaterialUniforms.cpp  MaterialUniforms.h  Shader.cpp  Shader.h  ShaderHelpers.cpp  ShaderHelpers.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h  TextureParameters.hpp
Engine/Source/Services/: Clock.cpp  Clock.h  DefaultResourcesCollection.cpp  DefaultResourcesCollection.h  EntityManager.cpp  EntityManager.h  InputCodes.hpp  InputSystem.cpp  InputSystem.h  ResourceManager.cpp  ResourceManager.h
Engine/Source/Util/: DebugFeatures.hpp  MemoryLeakDetection.h  Random.cpp  Random.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h
Games/Fantasyland/: CMakeLists.txt  premake5.lua
Games/Fantasyland/Source/: Main.cpp
Games/Snake/: CMakeLists.txt  premake5.lua
Games/Snake/Source/: Main.cpp  SnakeGameMode.cpp  SnakeGameMode.h
Libs/: CMakeLists.txt
Libs/glad/: CMakeLists.txt  premake5.lua
Libs/glfw/: CMakeLists.txt  premake5.lua
Libs/glm/: CMakeLists.txt  premake5.lua
Libs/googletest/: CMakeLists.txt  premake5.lua
Libs/imgui/: CMakeLists.txt  premake5.lua
Libs/imgui-stdlib/: premake5.lua
Libs/imgui-stdlib/imgui-stdlib/: imgui_stdlib.cpp  imgui_stdlib.h
Libs/imgui_stdlib/: premake5.lua
Libs/soloud/: CMakeLists.txt  premake5.lua
Libs/stb_image/: CMakeLists.txt  empty.c  premake5.lua
Playground/AnimationPlayground/: CMakeLists.txt  premake5.lua
Playground/AnimationPlayground/Source/: Main.cpp  WindowConstants.h
Playground/AudioPlayground/: CMakeLists.txt  premake5.lua
Playground/AudioPlayground/Source/: Main.cpp  WindowConstants.h
Playground/ParticlePlayground/: CMakeLists.txt  premake5.lua
Playground/ParticlePlayground/Source/: Main.cpp
Tests/: CMakeLists.txt  Main.cpp  premake5.lua
Tests/Assets/Shaders/: default_particle_test.frag  default_particle_test.vert  test.vert
Tests/Core/: Application.cpp
Tests/FactorialTests/: Tests.cpp
Tests/Source/: Main.cpp
Tests/Source/Util/: GameTestAbstractions.h  GameTestMacros.h  TestMacros.h
Tests/Tests/Core/: Application.cpp
Tests/Tests/Util/: RandomNumberGenerator.cpp
Tests/Util/: RandomNumberGenerator.cpp
(+213 files in other folders)
